--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>Your Title Goes Here</h1>
+    <h1>Kirby's Love for Food</h1>
+    <h2>Help Kirby by guiding him to the falling food. Ordinary food that he eats is worth a point but legendary strawberry shortcake is worth three points.</h2>
     <svg id="canvas" width="100%" viewBox="0 0 200 100">
     </svg>
+    <button onclick="obstacles()">Lets-a-go...</button>
     <script src="final_project.js"></script>
   </body>
 </html>
