--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h2>Help Kirby by guiding him to the falling food. Ordinary food that he eats is worth a point but legendary strawberry shortcake is worth three points.</h2>
     <svg id="canvas" width="100%" viewBox="0 0 200 100">
     </svg>
-    <button onclick="obstacles()">Lets-a-go...</button>
+    <button onclick="obstacles()">Poyo!</button>
     <script src="final_project.js"></script>
   </body>
 </html>
