--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   </head>
   <body>
     <h1>Kirby's Love for Food</h1>
-    <h2>Help Kirby by guiding him to the falling food. Ordinary food that he eats is worth a point but legendary strawberry shortcake is worth three points.</h2>
+    <h2>Help Kirby by guiding him to the falling food. All food is worth a point. Watch out for the pesky Waddle Dees and Gordos. If they touch you, its game over! May the odds be ever in your "flavor". xd</h2>
     <svg id="canvas" width="100%" viewBox="0 0 200 100">
     </svg>
-    <button onclick="obstacles()">Poyo!</button>
+    <button onclick="food()">Poyo!</button>
     <script src="final_project.js"></script>
   </body>
 </html>
